@@ -225,5 +225,56 @@ if (!defined('DATE_RSS')) { define('DATE_RSS', "D, d M Y H:i:s T"); }
         }
         return zm_is_in_array(strtolower($value), "on,true,yes,1");
     }
- 
+
+
+    /**
+     * Extract the base product id from a given string.
+     *
+     * @package net.radebatz.zenmagick.misc
+     * @param string productId The full product id incl. attribute suffix.
+     * @return int The product id.
+     */
+    function zm_base_product_id($productId) {
+        $arr = explode(':', $productId);
+        return (int) $arr[0];
+    }
+
+
+    /**
+     * Reverse of <code>zm_base_product_id</code>.
+     *
+     * <p>Creates a unique id for the given product variation.</p>
+     *
+     * <p>Attributes are sorted using <code>krsort(..)</code> so to be compatible
+     * for different attribute orders.</p>
+     *
+     * @package net.radebatz.zenmagick.misc
+     * @param string productId The full product id incl. attribute suffix.
+     * @param array attrbutes Additional product attributes.
+     * @return string The product id.
+     * @todo currently uses <code>zen_get_uprid(..)</code>...
+     */
+    function zm_product_variation_id($productId, $attributes=array()) {
+return zen_get_uprid($productId, $attributes);
+        $fullProductId = $productId;
+
+        if (is_array($attributes) && !strstr($productId, ':')) {
+            krsort($attributes);
+            $s = $productId;
+            foreach ($attributes as $id => $value) {
+	              if (is_array($value)) {
+                    foreach ($value as $vid => $vval) {
+                        $s .= '{' . $id . '}' . trim($vid);
+                    }
+                } else {
+                    $s .= '{' . $id . '}' . trim($value);
+                }
+            }
+            $fullProductId .= ':' . md5($s);
+        }
+
+        return $fullProductId;
+    }
+
+
 ?>
