@@ -43,16 +43,16 @@
               .append(item.qty + ' x ' + '<a href="' + href + '">' + item.name + '</a><br />');
         }
         // total
-        $('#sb_cart').append('<hr/>').append('<p>' + cart.total + '</p>');
+        $('#sb_cart').append('<hr/>')
+          .append('<p><img id="cart_progress" src="<?php $zm_theme->themeUrl('images/circle-ball-dark-antialiased.gif') ?>" style="display:none;float:left;" alt="progress" />' + cart.total + '</p>');
 
-        $('#cart_progress').hide();
 
         return msg;
     };
 </script>
 
 <?php if (!zm_is_checkout_page()) { ?>
-<h3><img id="cart_progress" src="<?php $zm_theme->themeUrl('images/circle-ball-dark-antialiased.gif') ?>" style="display:none;float:right;" alt="progress" /><?php zm_l10n("Shopping Cart") ?></h3>
+<h3><a href="<?php zm_secure_href(FILENAME_SHOPPING_CART); ?>"><?php zm_l10n("[More]") ?></a><?php zm_l10n("Shopping Cart") ?></h3>
     <div id="sb_cart" class="box">
         <?php if ($zm_cart->isEmpty()) { ?>
             <?php zm_l10n("Cart is Empty") ?>
@@ -61,6 +61,6 @@
             <?php echo $item->getQty(); ?> x <a href="<?php zm_product_href($item->getId()) ?>"><?php echo $item->getName(); ?></a><br />
         <?php } ?>
         <hr/>
-        <p><?php zm_format_currency($zm_cart->getTotal()) ?></p>
+        <p><img id="cart_progress" src="<?php $zm_theme->themeUrl('images/circle-ball-dark-antialiased.gif') ?>" style="display:none;float:left;" alt="progress" /><?php zm_format_currency($zm_cart->getTotal()) ?></p>
     </div>
 <?php } ?>
